--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                               data-parent="#accordionExample1">
                               <div class="card-body">
                                 <button id="miaoli" type="button" class="btn btn-outline-primary btn-block">苗栗 <span
-                                    class="badge badge-danger badge-pill">1</span></button>
+                                    class="badge badge-danger badge-pill">2</span></button>
                               </div>
                             </div>
                           </div>
@@ -265,8 +265,8 @@
                   play.innerHTML = "森林之歌/嘉義公園/仁義潭水庫"
                 }
                 miaoli_btn.onclick = function () {
-                  sleep.innerHTML = " "
-                  eat.innerHTML = "石二鍋"
+                  sleep.innerHTML = "龍鳳漁港/客家圓樓"
+                  eat.innerHTML = "石二鍋/路易莎咖啡(竹南大營店)"
                   play.innerHTML = "苗栗縣竹南鎮新南國民小學"
                 }
               </script>
