--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
 
   <!-- timeline Section -->
   <section id="timeline">
-    <div class="container">
+    <div class="text-center">
       <h2 class="text-center text-uppercase text-secondary mb-0">時間軸&足跡</h2>
       <hr class="star-dark mb-5">
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <div class="accordion" id="accordionExample">
-            <div class="container text-center">
+            <div class="text-center">
               <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseOne"
                 aria-expanded="true" aria-controls="collapseOne">
                 時間軸
