--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
     type="text/css">
 
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template -->
@@ -27,7 +30,6 @@
 
 <body id="page-top">
   <!-- Header -->
-  <header>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
@@ -50,8 +52,52 @@
         </div>
       </div>
     </nav>
-    <div style="height:100px"></div>
+
+    <header>
+      <!-- Swiper -->
+      <div class="swiper-container">
+          <div class="swiper-wrapper">
+              <div class="swiper-slide"><img src="img/photo/01.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/02.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/03.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/04.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/05.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/06.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/07.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/08.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/09.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/10.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/11.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/12.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/13.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/14.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/15.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/16.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/17.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/18.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/19.jpg"></div>
+              <div class="swiper-slide"><img src="img/photo/20.jpg"></div>
+          </div>
+          <!-- Add Scrollbar -->
+          <div class="swiper-scrollbar"></div>
+      </div>
+      <!-- Swiper JS -->
+      <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+      <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+      <!-- Initialize Swiper -->
+      <script>
+          var swiper = new Swiper('.swiper-container', {
+              scrollbar: {
+                  el: '.swiper-scrollbar',
+                  hide: true,
+              },
+              slidesPerView: 4,
+              spaceBetween: 30,
+              lazy: true,
+          });
+      </script>
   </header>
+  <div style="height:100px"></div>
   <!-- Portfolio Grid Section -->
   <section class="portfolio" id="portfolio">
     <div class="container">
