--- a/index.html
+++ b/index.html
@@ -30,74 +30,84 @@
 
 <body id="page-top">
   <!-- Header -->
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Just Love</a>
-        <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button"
-          data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-          aria-label="Toggle navigation">
-          Menu
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">App區</a>
-            </li>
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#timeline">時間軸&足跡</a>
-            </li>
-          </ul>
-        </div>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg bg-secondary text-uppercase" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Just Love</a>
+      <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button"
+        data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">App區</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#timeline">時間軸&足跡</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <header>
-      <!-- Swiper -->
-      <div class="swiper-container">
-          <div class="swiper-wrapper">
-              <div class="swiper-slide"><img src="img/photo/01.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/02.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/03.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/04.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/05.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/06.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/07.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/08.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/09.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/10.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/11.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/12.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/13.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/14.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/15.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/16.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/17.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/18.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/19.jpg"></div>
-              <div class="swiper-slide"><img src="img/photo/20.jpg"></div>
-          </div>
-          <!-- Add Scrollbar -->
-          <div class="swiper-scrollbar"></div>
+  <header>
+    <!-- Swiper -->
+    <div class="swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><img width="100%" src="img/photo/01.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/02.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/03.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/04.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/05.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/06.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/07.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/08.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/09.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/10.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/11.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/12.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/13.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/14.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/15.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/16.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/17.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/18.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/19.jpg"></div>
+        <div class="swiper-slide"><img width="100%" src="img/photo/20.jpg"></div>
       </div>
-      <!-- Swiper JS -->
-      <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-      <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-      <!-- Initialize Swiper -->
-      <script>
-          var swiper = new Swiper('.swiper-container', {
-              scrollbar: {
-                  el: '.swiper-scrollbar',
-                  hide: true,
-              },
-              slidesPerView: 4,
-              spaceBetween: 30,
-              lazy: true,
-          });
-      </script>
+      <!-- Add Scrollbar -->
+      <div class="swiper-scrollbar"></div>
+    </div>
+    <!-- Swiper JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper('.swiper-container', {
+        scrollbar: {
+          el: '.swiper-scrollbar',
+          hide: true,
+        },
+        pagination: {
+          el: '.swiper-pagination',
+        },
+        navigation: {
+          nextEl: '.swiper-button-next',
+          prevEl: '.swiper-button-prev',
+        },
+        autoplay: {
+        delay: 2500,
+        disableOnInteraction: false,
+        },
+        slidesPerView: 4,
+        spaceBetween: 0,
+        lazy: true,
+      });
+    </script>
   </header>
-  <div style="height:100px"></div>
   <!-- Portfolio Grid Section -->
   <section class="portfolio" id="portfolio">
     <div class="container">
