--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
           prevEl: '.swiper-button-prev',
         },
         autoplay: {
-        delay: 2500,
-        disableOnInteraction: false,
+          delay: 2500,
+          disableOnInteraction: false,
         },
         slidesPerView: 4,
         spaceBetween: 0,
@@ -384,7 +384,9 @@
           <div class="col-lg-12 mx-auto">
             <h2 class="text-secondary text-uppercase mb-0">說走就走</h2>
             <hr class="star-dark mb-5">
-            <iframe src="games/game01.html" frameborder="0" style="width:100%" height="600px" width="100%"></iframe>
+            <div class="container">
+              <iframe src="games/game01.html" frameborder="0" style="width:100%" height="600px" width="100%"></iframe>
+            </div>
           </div>
         </div>
       </div>
