--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
     <!-- Initialize Swiper -->
     <script>
       var swiper = new Swiper('.swiper-container', {
+        lazy: true,
+        loop: true,
+        slidesPerView: 4,
+        spaceBetween: 0,
         scrollbar: {
           el: '.swiper-scrollbar',
           hide: true,
@@ -98,9 +102,6 @@
           delay: 2500,
           disableOnInteraction: false,
         },
-        slidesPerView: 4,
-        spaceBetween: 0,
-        lazy: true,
       });
     </script>
   </header>
